# rustboyadvance-ng

./: .gitignore  .gitmodules  .travis.yml  0.bootstrap.js  1.bootstrap.js  Cargo.toml  Dockerfile.android  LICENSE  README.md  bootstrap.js  build.rs
.github/workflows/: build.yml  deploy.yml
AndroidApp/: README.md  build.gradle  settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
arm7tdmi/: Cargo.toml  build.rs
arm7tdmi/examples/: simple_emulator.rs
arm7tdmi/examples/test_program/: .gitignore  Makefile  reset.s  test.c  test.elf  test.ld  test.map
arm7tdmi/src/: alu.rs  cpu.rs  disass.rs  exception.rs  lib.rs  memory.rs  psr.rs  simple_memory.rs
arm7tdmi/src/arm/: arm_isa.rs  disass.rs  display.rs  exec.rs  mod.rs
arm7tdmi/src/gdb/: breakpoints.rs  mod.rs  target.rs
arm7tdmi/src/thumb/: disass.rs  exec.rs  mod.rs
assets/: browserconfig.xml  manifest.json  manifest.webapp
bindings/rustboyadvance-jni/: Cargo.toml
bindings/rustboyadvance-jni/src/: emulator.rs  lib.rs  rom_helper.rs
bindings/rustboyadvance-jni/src/audio/: mod.rs  thread.rs
core/: BENCHMARK.md  Cargo.toml  build.rs
core/benches/: performance.rs
core/benches/roms/: README.md
core/src/: bios.rs  bus.rs  dma.rs  gba.rs  gdb.rs  gdb_support.rs  interrupt.rs  iodev.rs  keypad.rs  lib.rs  mgba_debug.rs  overrides.rs  sched.rs  sysbus.rs  timer.rs  util.rs
core/src/arm7tdmi/: alu.rs  cpu.rs  disass.rs  exception.rs  memory.rs  mod.rs
core/src/arm7tdmi/arm/: disass.rs  display.rs  exec.rs  mod.rs
core/src/arm7tdmi/thumb/: disass.rs  exec.rs  mod.rs
core/src/cartridge/: builder.rs  gpio.rs  header.rs  loader.rs  mod.rs  rtc.rs
core/src/cartridge/backup/: backup_file.rs  eeprom.rs  flash.rs  mod.rs
core/src/debugger/: command.rs  mod.rs  palette_view.rs  parser.rs
core/src/gdb_support/: event_loop.rs  gdb_thread.rs  memory_map.rs  target.rs
core/src/gpu/: layer.rs  mod.rs  mosaic.rs  regs.rs  render.rs  rgb15.rs  sfx.rs  window.rs
core/src/gpu/render/: bitmap.rs  obj.rs  text.rs
core/src/sound/: dsp.rs  fifo.rs  interface.rs  mod.rs
fps_bench/: Cargo.toml
fps_bench/src/: main.rs
platform/android/app/: build.gradle
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/rustboyadvance-jni/: Cargo.toml
platform/rustboyadvance-jni/src/: emulator.rs  lib.rs  rom_helper.rs
platform/rustboyadvance-jni/src/audio/: connector.rs  mod.rs  thread.rs
platform/rustboyadvance-libretro/: Cargo.toml  README.md
platform/rustboyadvance-libretro/src/: lib.rs
platform/rustboyadvance-minifb/: Cargo.toml
platform/rustboyadvance-minifb/src/: main.rs
platform/rustboyadvance-py/: Cargo.toml
platform/rustboyadvance-py/src/: lib.rs
platform/rustboyadvance-sdl2/: Cargo.toml  build.rs
platform/rustboyadvance-sdl2/src/: audio.rs  cli.yml  input.rs  main.rs  options.rs  video.rs
platform/rustboyadvance-term/: Cargo.toml
platform/rustboyadvance-term/src/: audio.rs  cli.yml  input.rs  main.rs  options.rs  video.rs
platform/rustboyadvance-wasm/: Cargo.toml  LICENSE_MIT
platform/rustboyadvance-wasm/app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
platform/rustboyadvance-wasm/src/: emulator.rs  lib.rs
rustboyadvance-core/: Cargo.toml  build.rs  overrides.yaml
rustboyadvance-core/src/: disass.rs  dma.rs  gba.rs  iodev.rs  lib.rs  sysbus.rs  timer.rs  util.rs
rustboyadvance-core/src/arm7tdmi/: alu.rs  mod.rs
rustboyadvance-core/src/arm7tdmi/arm/: exec.rs
rustboyadvance-core/src/arm7tdmi/thumb/: display.rs  mod.rs
rustboyadvance-core/src/cartridge/: builder.rs  gpio.rs  loader.rs  mod.rs  rtc.rs
rustboyadvance-core/src/cartridge/backup/: flash.rs
rustboyadvance-core/src/core/: bus.rs  gba.rs  iodev.rs  mod.rs
rustboyadvance-core/src/core/arm7tdmi/: mod.rs
rustboyadvance-core/src/core/arm7tdmi/arm/: exec.rs
rustboyadvance-core/src/core/arm7tdmi/thumb/: display.rs
rustboyadvance-core/src/core/cartridge/: builder.rs  loader.rs  mod.rs
rustboyadvance-core/src/core/gpu/: layer.rs  mod.rs  regs.rs  rgb15.rs  sfx.rs  window.rs
rustboyadvance-core/src/core/gpu/render/: bitmap.rs
rustboyadvance-core/src/core/sound/: mod.rs
rustboyadvance-core/src/debugger/: command.rs  mod.rs  palette_view.rs  parser.rs  tile_view.rs
rustboyadvance-core/src/gpu/: mod.rs  mosaic.rs  regs.rs  sfx.rs
rustboyadvance-core/src/gpu/render/: bitmap.rs  obj.rs  text.rs
rustboyadvance-jni/: Cargo.toml
rustboyadvance-jni/src/: lib.rs
rustboyadvance-minifb/: Cargo.toml
rustboyadvance-minifb/src/: cli.yml  main.rs
rustboyadvance-sdl2/: Cargo.toml  build.rs
rustboyadvance-sdl2/src/: input.rs  main.rs
src/: backend.rs  build.rs  cartridge.rs  cli.yml  debugger.rs  disass.rs  disassembler.rs  gba.rs  gdb.rs  gpu.rs  ioregs.rs  lcd.rs  lib.rs  main.rs  minifb_backend.rs  palette.rs  sysbus.rs  util.rs
src/arm7tdmi/: alu.rs  bus.rs  cpu.rs  exception.rs  mod.rs  psr.rs
src/arm7tdmi/arm/: arm_isa.rs  display.rs  exec.rs  mod.rs
src/arm7tdmi/thumb/: display.rs  exec.rs  mod.rs
src/backend/: cpal_backend.rs  minifb_backend.rs  mod.rs  sdl2_backend.rs
src/core/: bus.rs  cartridge.rs  dma.rs  gba.rs  gpu.rs  interrupt.rs  iodev.rs  ioregs.rs  keypad.rs  mod.rs  palette.rs  sysbus.rs  timer.rs
src/core/arm7tdmi/: alu.rs  bus.rs  cpu.rs  exception.rs  mod.rs  psr.rs
src/core/arm7tdmi/arm/: display.rs  exec.rs  lut.rs  mod.rs
src/core/arm7tdmi/thumb/: display.rs  exec.rs  lut.rs  mod.rs
src/core/backup/: flash.rs  mod.rs
src/core/cartridge/: builder.rs  header.rs  mod.rs
src/core/cartridge/backup/: backup_file.rs  eeprom.rs  flash.rs  mod.rs
src/core/gpu/: layer.rs  mod.rs  mosaic.rs  obj.rs  regs.rs  render.rs  rgb15.rs  sfx.rs  window.rs
src/core/gpu/render/: bitmap.rs  obj.rs  (+1 more)
src/core/sound/: dsp.rs  fifo.rs  mod.rs
src/debugger/: command.rs  mod.rs  palette_view.rs  parser.rs  render_view.rs  tile_view.rs
src/plat/minifb/: main.rs
src/plat/sdl2/: audio.rs  cli.yml  input.rs  keyboard.rs  main.rs  video.rs
utils/: Cargo.toml
utils/src/: elf.rs  lib.rs
(+83 files in other folders)
