[workspace]
members = [
    "core",
    "platform/rustboyadvance-sdl2",
    "platform/rustboyadvance-libretro",
    "platform/rustboyadvance-minifb",
    "platform/rustboyadvance-wasm",
    "bindings/rustboyadvance-jni",
    "fps_bench"
]

[profile.dev]
opt-level = 2
debug = true

[profile.release]
debug = false

[profile.release-dev]
inherits = "release"
opt-level = 3
debug = true
debug-assertions = false

[profile.release-lto]
inherits = "release"
lto = true