[package]
name = "rustboyadvance-core"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2024"

[dependencies]
arm7tdmi = { path = '../arm7tdmi' }
rustboyadvance-utils = { path = "../utils" }
cfg-if = "1.0.0"
serde = { version = "1.0.104", features = ["derive", "rc"] }
bincode = { version = "2.0.1", features = ["serde", "derive"]}
byteorder = "1"
num = "0.4.3"
num-traits = "0.2"
num-derive = "0.4"
bit = "0.1.1"
chrono = "0.4"
colored = "3.0.0"
ansi_term = "0.12.1"
hexdump = "0.1.0"
time = "0.3.41"
bitfield = "0.19.2"
bitflags = { version = "2.9.3", features = ["serde"] }
ringbuf = "0.4.8"
zip = { version = "4.6.0", default-features = false, features = [
    "deflate",
    "time"
] }
bit-set = "0.8.0"
debug_stub_derive = "0.3.0"
bytesize = "2.0.1"
memmem = "0.1.1"
log = "0.4.8"
arrayvec = "0.7.6"
sha2 = "0.10.9"
hex-literal = "1.0.0"
rustyline = { version = "17.0.1", optional = true }
nom = { version = "8.0.0", optional = true }
nom-language = "0.1.0"
fuzzy-matcher = { version = "0.3.4", optional = true }
bit_reverse = "0.1.8"
yaml-rust = "0.4"
lazy_static = "1.4.0"
smart-default = "0.7.1"
crossbeam = "0.8.2"
xml-builder = "0.5.0"
goblin = { version = "0.10.1", optional = true }
clap = { version = "4.5.46", features = ["derive"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "performance"
harness = false

[features]
default = []
elf_support = []
debugger = ["nom", "rustyline", "fuzzy-matcher", "elf_support", "goblin", "arm7tdmi/debugger"]