[package]
name = "rustboyadvance-jni"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2018"
description = "JNI bindings for rustboyadvance core"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
rustboyadvance-core = {path = "../../core/", features = ["no_video_interface"]}
jni = "0.17.0"
log = {version = "0.4.8", features = ["release_max_level_info", "max_level_debug"]}

[target.'cfg(target_os="android")'.dependencies]
android_log = "0.1.3"

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "0.7.1"
