[package]
name = "rustboyadvance-sdl2"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2018"

[dependencies]
rustboyadvance-ng = {path = "../../"}
sdl2 = {version = "0.33.0", features = ["image"]}
ringbuf = "0.2.1"
bytesize = "1.0.0"
clap = {version = "2.33", features = ["color", "yaml"]}
log = "0.4.8"
flexi_logger = {version = "0.14", features = ["colors"]}
bit = "^0.1"
spin_sleep="0.3.7"


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
debugger = ["rustboyadvance-ng/debugger"]
gdb = ["rustboyadvance-ng/gdb"]
arm7tdmi_dispatch_table = ["rustboyadvance-ng/arm7tdmi_dispatch_table"]