[package]
name = "rustboyadvance-sdl2"
version = "0.1.0"
authors = ["Michel Heily <michelheily@gmail.com>"]
edition = "2024"

[dependencies]
rustboyadvance-core = { path = "../../core/", features = ["elf_support"] }
rustboyadvance-utils = { path = "../../utils/" }
sdl2 = { version = "0.38.0", features = ["image"] }
bytesize = "2.0.1"
clap = { version = "4.5.46", features = ["derive"] }
log = "0.4.8"
flexi_logger = { version = "0.31.2", features = ["colors"] }
bit = "^0.1"
spin_sleep = "1.3.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
debugger = ["rustboyadvance-core/debugger"]