[package]
name = "rustboyadvance-term"
version = "0.1.0"
authors = ["Felix Roithmayr <felix.roithmayr@aon.at>"]
edition = "2018"

[dependencies]
rustboyadvance-core = { path = "../../core/", features = ["elf_support"] }
rustboyadvance-utils = { path = "../../utils/" }
structopt = "0.3"
bit = "^0.1"
tinyaudio = "1.1.0"
tokio = { version = "1.44.2", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
image = "0.25.6"
futures = "0.3.31"
color-eyre = "0.6.4"
viuer = "0.9.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# [features]
# default = ["gdb"]
# debugger = ["rustboyadvance-core/debugger"]
# gdb = ["rustboyadvance-core/gdb"]